tdf#114769: sw html export: better handling for relative URLs

Usage of INetURLObject makes sense only in case of full URLs,
but once relative one is provided it will contain invalid data.

Change-Id: Icc5e191e2337a3dd9a76c660b1c7709551099a1a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138875
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 599da3fa69805ebf8dee4517855fd8706e19d11d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138979